# fractal-viewer

./: CREDITS  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: main.yml
game/: burning_ship.py  iter_fractal_viewer.py  julia.py  mandelbrot.py  newton_fractal.py  play.py  preturbation.py  shader.py  sierpinsky_carpet.py
menus/: fractal_chooser.py  main.py  settings.py
utils/: constants.py  preload.py  utils.py
